--- a/app/src/main/res/layout/header_base_func.xml
+++ b/app/src/main/res/layout/header_base_func.xml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="45dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
 
+    <ImageButton
+        android:id="@+id/next_week"
+        android:layout_width="24dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_next"
+        app:layout_constraintStart_toEndOf="@id/id_class_layout"
+        android:layout_height="24dp">
+    </ImageButton>
+
+    <ImageButton
+        android:id="@+id/pre_week"
+        android:layout_width="24dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/id_class_layout"
+        android:src="@drawable/ic_pre"
+        android:layout_height="24dp">
+
+    </ImageButton>
+
+
     <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center_horizontal"
         android:id="@+id/id_class_layout"
         android:orientation="horizontal">
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -49,9 +80,12 @@
         android:id="@+id/id_more"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_margin="10dp"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         android:src="@drawable/attribute"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
